Add first simple instructions to the assembler using asmjit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.19.0)
 set (CMAKE_CXX_STANDARD 17)
-project(Understandable_Tracing_JIT_Compiler)
+project(TigerShrimp)
 
 include_directories(include)
- 
+
 file(GLOB SOURCES "src/*.cpp")
- 
+
 # Tell asmjit that it will be embedded.
 Set(ASMJIT_EMBED TRUE)
 Add_Definitions(-DASMJIT_STATIC)
@@ -13,8 +13,10 @@ Add_Definitions(-DASMJIT_STATIC)
 Set(ASMJIT_DIR "libs/asmjit")
 Include("${ASMJIT_DIR}/CMakeLists.txt")
 
+include_directories("libs/asmjit/src")
+
 # If you add a library / executable, include asmjit sources.
-Add_Executable(tigershrimp ${SOURCES} ${ASMJIT_SRC})
+Add_Executable(TigerShrimp main.cpp ${SOURCES} ${ASMJIT_SRC})
 
 # You still have to include asmjit dependencies.
-Target_Link_Libraries(tigershrimp ${ASMJIT_DEPS})
+Target_Link_Libraries(TigerShrimp ${ASMJIT_DEPS})
