Initial work of parsing Java/JVM class file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,9 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "__tree": "cpp",
+        "map": "cpp"
     },
     "cmake.configureOnOpen": true
 }
