Initial work with the x86 compiler

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,7 +67,8 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "__tree": "cpp",
-        "map": "cpp"
+        "map": "cpp",
+        "queue": "cpp"
     },
     "cmake.configureOnOpen": true
 }
