Change tracePointer to TracePointer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,7 +70,8 @@
         "map": "cpp",
         "queue": "cpp",
         "list": "cpp",
-        "set": "cpp"
+        "set": "cpp",
+        "compare": "cpp"
     },
     "cmake.configureOnOpen": true
 }
