Make recorder flip branches if needed, support more mnemonics in compiler.
Co-authored-by: Jakob Erlandsson <erjakob@student.chalmers.se>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,7 +71,9 @@
         "queue": "cpp",
         "list": "cpp",
         "set": "cpp",
-        "compare": "cpp"
+        "compare": "cpp",
+        "__functional_03": "cpp",
+        "memory_resource": "cpp"
     },
     "cmake.configureOnOpen": true
 }
