--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(fmt)
 
 include_directories(include include/JVM)
 
-file(GLOB SOURCES "src/*.cpp" "src/JVM/*.cpp")
+file(GLOB SOURCES "src/*.cpp" "src/JVM/*.cpp" "src/utils/*.cpp")
 
 # Tell asmjit that it will be embedded.
 Set(ASMJIT_EMBED TRUE)
